# vb_UGens

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  dispatch-build.yml
HelpSource/Classes/: MiPlaits.schelp  VBJonVerb.schelp  VBPVoc.schelp  VBSlide.schelp
classes/: MiPlaits.sc  MiRings.sc  VBFourses.sc  VBPVoc.sc  VBSlide.sc
mi-dev/MiRings/: MiRings-Test.scd  MiRings.cpp
mi-dev/MiRings/sc/: MiRings.sc
mi-dev/MiRings/sc/HelpSource/: MiRings.schelp
projects/NPleth/: CMakeLists.txt  npleth.cpp
projects/NPleth/include/: filter.h  generator.h  np_arrayOnTheRocks.hpp  np_atari.hpp  np_basuratotal.hpp  np_clustersaw.hpp  np_crCluster2.hpp  np_crossmodring.hpp  np_existenceispain.hpp  np_fibonaccicluster.hpp  np_grainglitch.hpp  np_grainglitch2.hpp  np_grainglitch3.hpp  np_partialcluster.hpp  np_pwcluster.hpp  np_radioOhNo.hpp  np_resonoise.hpp  np_rwalkbitcrushpw.hpp  np_rwalksinefmflange.hpp  np_s_h.hpp  np_satansworkout.hpp  np_trifmcluster.hpp  np_whoknows.hpp  np_xmodringsine.hpp
projects/NPleth/teensy/: audio_core.hpp  dspinst.h  effect_bitcrusher.h  effect_flange.cpp  effect_freeverb.cpp  effect_granular.hpp  filter_variable.hpp  synth_pwm.hpp  synth_sine.hpp  synth_waveform.hpp
projects/RCD/: CMakeLists.txt  vb.rcd.cpp
projects/SCM/: CMakeLists.txt  cv_skip.inc  vb.scm.cpp  vb.scm~.c
projects/vbChebyFilt/: CMakeLists.txt  vbChebyFilt.cpp
projects/vbFourses/: CMakeLists.txt  vbFourses.cpp
projects/vbJonVerb/: CMakeLists.txt  vbJonVerb.cpp
projects/vbPVoc/: CMakeLists.txt  MyFFTInterfaceTable.cpp  MyFFTInterfaceTable.h  vbPVoc.cpp
projects/vbRCD/: vb.rcd.cpp
projects/vbUtils/: CMakeLists.txt  vbUtils.cpp
sc/HelpSource/Classes/: Lores.schelp  NPleth.schelp  RCD.schelp  SCM.schelp  Slide.schelp  VBChebyFilt.schelp  VBFourses.schelp
sc/classes/: Lores.sc  NPleth.sc  RCD.sc  SCM.sc  Slide.sc  VBChebyFilt.sc  VBFourses.sc  VBJonVerb.sc  VBPVoc.sc
vbFourses/: CMakeLists.txt  vbFourses.cpp
vbJonVerb/: CMakeLists.txt  vb.jonverb.h  vbJonVerb.cpp
vbPVoc/: CMakeLists.txt  MyFFTInterfaceTable.h  vbPVoc.cpp
vbUGens/: CMakeLists.txt  vbUGens.cpp
